--- a/Komplex prog/covid19.html
+++ b/Komplex prog/covid19.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-<title>covid-19</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <title>covid19</title>
 </head>
 <body>
-
-<h1>COVID-19</h1>
-<p>A magyar kormány operatív törzset hozott létre az új koronavírus elleni küzdelem érdekében.
-    Ezen a honlapon hiteles és naprakész információkat talál a hatósági intézkedésekről, a megelőzéshez szükséges lépésekről és teendőkről a panaszok esetén.
-    Tegyünk mindannyian az egészségünkért!</p>
-
+    
 </body>
 </html>
