--- a/Komplex prog/covid19.html
+++ b/Komplex prog/covid19.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <title>covid19</title>
 </head>
 <body>
+    <h1 id="covidh">Tájékoztató oldal a koronavírusról</h1><hr>
+    <p id="covidp"><br>A magyar kormány operatív törzset hozott létre az új koronavírus elleni küzdelem érdekében.
+        Ezen a honlapon hiteles és naprakész információkat talál a hatósági intézkedésekről, a megelőzéshez szükséges lépésekről és teendőkről a panaszok esetén.
+        Tegyünk mindannyian az egészségünkért!<br><br></p>
+        <img src="covidkep.jpg" id="covidk">
+    <footer> 
+        <p>Készítette:<br> Orosz Zoltán</p>
     
+       
+    </footer>
 </body>
 </html>
